modules/alb/main.tf
resource "aws_lb" "public_alb" {
    name               = "clobee-alb"
    internal           = false
    load_balancer_type = "application"
    subnets            = [
        module.subnet.public_subnet1_id,
        module.subnet.public_subnet2_id,
    ]
    security_groups = [aws_security_group.alb_sg.id]
}

resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.public_alb.arn
    port              = 80
    protocol          = "HTTP"

    default_action {
        type             = "fixed-response"
        fixed_response {
        content_type = "text/plain"
        message_body = "OK"
        status_code  = "200"
        }
    }
}

resource "aws_security_group" "alb_sg" {
    name        = "alb-sg"
    description = "Allow HTTP traffic to ALB"
    vpc_id      = var.vpc_id

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "alb-sg"
    }
}
